workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/MonthlyVisitSummary__c.object-meta.xml
<CustomObject>
    <description>月次集計サマリー。StoreVisitMonthlyBatch で自動生成される。</description>
    <label>月次訪問サマリー</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>サマリー番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>月次訪問サマリー</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>