workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/AverageRating__c.field-meta.xml
<CustomField>
    <fullName>AverageRating__c</fullName>
    <label>平均評価</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>