workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/MaxRating__c.field-meta.xml
<CustomField>
    <fullName>MaxRating__c</fullName>
    <label>最高評価</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>