workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/MinRating__c.field-meta.xml
<CustomField>
    <fullName>MinRating__c</fullName>
    <label>最低評価</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>