workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/MonthEnd__c.field-meta.xml
<CustomField>
    <fullName>MonthEnd__c</fullName>
    <label>集計月（終了日）</label>
    <required>true</required>
    <type>Date</type>
</CustomField>