workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/MonthStart__c.field-meta.xml
<CustomField>
    <fullName>MonthStart__c</fullName>
    <label>集計月（開始日）</label>
    <required>true</required>
    <type>Date</type>
</CustomField>