workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/PendingActionCount__c.field-meta.xml
<CustomField>
    <fullName>PendingActionCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>未完了アクション数</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>