workshop-real/examples/force-app/main/default/objects/MonthlyVisitSummary__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>店舗</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>MonthlySummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>